src/main/metadata/objects/Template__c.object
<CustomObject>
    <description>Case: Use to store SMS, eDM Name for campaign, eDM for ad hoc request, MMS template name. This object is maintenace by data manager and is used by Ad Hoc and Campaign batch request</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnalyzeRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if allow reply more than a code</description>
        <label>Analyze Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_Series__c</fullName>
        <label>Car Series</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Saloon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS 63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Long Wheelbase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G 55 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G 63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G 65 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML 63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S 65 L AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL 63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLA-Class</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closure_SMS__c</fullName>
        <description>The final OB SMS template at the end of the loop</description>
        <label>Closure SMS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ErrorSMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Error SMS</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>Templates (Error SMS)</relationshipLabel>
        <relationshipName>ErrorSMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP',
IF(ISPICKVAL($User.Market__c, 'KR'), 'KR','NA')
)))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Template</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>Children Templates</relationshipLabel>
        <relationshipName>ChildrenTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Detail__c</fullName>
        <label>Message Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateID__c</fullName>
        <displayFormat>TA-{YYYY}-{000000}</displayFormat>
        <label>TemplateID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Template_ID__c</fullName>
        <label>Template ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used for eDM</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure+Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upstream &amp; Downstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Downstream</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ValidTimeHrs__c</fullName>
        <label>Valid Time (Hrs)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Message_Detail__c</columns>
        <columns>Car_Series__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Template__c.eDM,Template__c.Callscript,Template__c.SMS</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllSMS</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Message_Detail__c</columns>
        <columns>Car_Series__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Template__c.SMS</value>
        </filters>
        <label>All SMS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AlleDM</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Message_Detail__c</columns>
        <columns>Car_Series__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Template__c.eDM</value>
        </filters>
        <label>All edm</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <recordTypes>
        <fullName>Callscript</fullName>
        <active>true</active>
        <label>Callscript</label>
    </recordTypes>
    <recordTypes>
        <fullName>ChildrenMMSTemplate</fullName>
        <active>true</active>
        <label>Children MMS Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>ChildrenSMSTemplate</fullName>
        <active>true</active>
        <label>Children SMS Template</label>
    </recordTypes>
	<recordTypes>
        <fullName>KakaoTalk</fullName>
        <active>true</active>
        <label>KakaoTalk</label>
    </recordTypes>
	<recordTypes>
        <fullName>KaKao</fullName>
        <active>true</active>
        <label>KaKao</label>
    </recordTypes>
    <recordTypes>
        <fullName>MMS</fullName>
        <active>true</active>
        <label>MMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMS</fullName>
        <active>true</active>
        <label>SMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>eDM</fullName>
        <active>true</active>
        <label>eDM</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SMS_No_more_than_235</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(LEN(Closure_SMS__c)&gt;235, 
LEN(Message_Detail__c )&gt;235), 
RecordType.DeveloperName == 'SMS', 
$Profile.Name != 'IntegrationAPI')</errorConditionFormula>
        <errorMessage>Sorry, the SMS content is too long. Please make it shorter</errorMessage>
    </validationRules>
</CustomObject>